more sizing spacing fixing doing

--- a/wp-content/themes/carnes-crossroads-2015/scss/_print.scss
+++ b/wp-content/themes/carnes-crossroads-2015/scss/_print.scss
@@ -29,7 +29,7 @@
         }
 
         &-image {
-            margin: 5px auto 0 auto;
+            margin: 8px auto 0 auto;
             text-align: center;
             width: 100%;
 
@@ -87,7 +87,7 @@
         &-details {
             margin: 20px auto 0 auto;
             width: 100%;
-            height: 290px;
+            height: 285px;
             overflow: hidden;
             font-family: $proxima;
             font-size: 0.75rem;
@@ -105,7 +105,7 @@
             @include center(x);
 
             img {
-                width: 115px;
+                width: 105px;
             }
 
             p {
@@ -159,7 +159,7 @@
     }
 
     .listing-item {
-        height: 340px;
+        height: 330px;
         margin-top: 25px;
         margin-bottom: 5px;
         padding: 0 33px;
